# django-cqrs-demo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  manage.py  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci-cd.yml  codeql-analysis.yml  codeql.yml
ci/: docker-compose.yml
devops/docker/: Dockerfile
devops/docker/nginx/: nginx.conf
devops/docker/server/: Makefile
docker/: Dockerfile
docker/nginx/: nginx.conf
docker/server/: backend.sh  celery_beat.sh  celery_worker.sh  flower.sh  uwsgi.ini
docs/: _config.yml  architecture.md  code.md  cqrs.md  implementation.md  index.md  resources.md  structure.md
locale/en/LC_MESSAGES/: django.po
scripts/: lint.sh
server/: __init__.py  asgi.py  celery_app.py  urls.py  wsgi.py
server/apps/blogs/: __init__.py  apps.py
server/apps/core/: __init__.py  apps.py  errors.py
server/apps/users/: __init__.py  apps.py
server/settings/: __init__.py
server/settings/components/: api.py  apps.py  auth.py  celery.py  common.py  health.py  i18n.py  logs.py  media.py  models.py  security.py  templates.py
server/settings/environments/: build.py  development.py.example  production.py  test.py
src/: __init__.py  asgi.py  celery_app.py  manage.py
src/apps/core/: apps.py
src/apps/users/: apps.py
src/settings/components/: apps.py  common.py  email.py  i18n.py  logs.py  middleware.py  static.py  templates.py
src/settings/environments/: development.py.example  (+1 more)
tests/: conftest.py
tests/fixtures/: api.py  requests.py  settings.py  users.py
tests/helpers/: db.py  request_factory.py  users.py
(+232 files in other folders)
